<resources>
    <string name="app_name">Login page</string>
    <string name="email">Email:</string>
    <string name="signup">Signup</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="register">Register</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="account">Account</string>
    <string name="_0">0</string>
    <string name="_50">50</string>
    <string name="_200">200</string>
    <string name="todo1">TODO</string>
    <string name="_100">100</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>

    <string name="hour">1 hour</string>
    <string name="hours">%s hours</string>
    <string name="minute">1 minute</string>
    <string name="minutes">%s minutes</string>

    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now</item>
        <item>This alarm is set for %1$s from now</item>
        <item>This alarm is set for %2$s from now</item>
        <item>This alarm is set for %1$s and %2$s from now</item>
    </string-array>


    <string name="tv_start_alarm_text">Tap here\nto set alarm</string>

</resources>
